@@ -1,3 +1,6 @@
+2017-03-12  Kirit Saelensminde  <kirit@felspar.com>
+ Make the object logging functions properly variadic.
+
 2017-02-05  Kirit Saelensminde  <kirit@felspar.com>
  Add a time profile for generating a histogram of timing results.
 
